<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
    <item
        android:id="@+id/temperature"
        android:title="@string/temp_chart"
        android:icon="@drawable/ic_menu_slideshow"
        > </item>

    <item
        android:id="@+id/humidity"
        android:title="@string/humidity_chart"
        android:icon="@drawable/ic_menu_gallery"
        > </item>

    <item
        android:id="@+id/moisture"
        android:title="@string/pH_chart"
        android:icon="@drawable/ic_menu_gallery"
        > </item>

        <item
            android:id="@+id/uv"
            android:title="@string/light_chart"
            android:icon="@drawable/ic_menu_gallery"
            > </item>

        <item
            android:id="@+id/co"
            android:title="@string/co_chart"
            android:icon="@drawable/ic_menu_gallery"
            > </item>

</group>

    <item android:title="@string/social">
        <menu>
            <item
                android:title="@string/add_group"
                android:id="@+id/add_to_group"
                android:icon="@drawable/ic_menu_camera"
                ></item>
            <item
                android:title="@string/add_group"
                android:id="@+id/id_group"
                android:icon="@drawable/ic_menu_send"
                ></item>
            <item
                android:title="@string/share"
                android:id="@+id/id_share"
                android:icon="@drawable/ic_menu_share"
                ></item>

        </menu>

    </item>

</menu>